kubernetes/KC/deployments/home-automation/zwave-js-ui/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: zwave-js-ui
    namespace: home-automation
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:sTi33mKOdXWtFm7ShgQvYj32D3bX06WhJA==,iv:m+HLJPfIQiqA90Uo8HXpx08maBDSwrgAjdc/cTbNdEA=,tag:y9Jg5h1L65J00bHr1QfJgQ==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:iR94sRgMoXQtS5Q=,iv:35Q4M/yGZqxKzTgDT8LDjUtq5/tolymVNKS4FVxn/So=,tag:02NzXyq8L3UGToKlVCp3yg==,type:str]
              port: ENC[AES256_GCM,data:yyjK2w==,iv:rZ8a7HLVCgCdClcC0qLeJ9rgddxiWy84S7EtvuJ39zw=,tag:rE5BkDXR7q+CYkRUq3mfgg==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:EMWtDL565S+2dxI=,iv:OxF8ioT8Uz7HVQBFuh8ghgbXQP2cU2h5LgnEtH2CDN4=,tag:FHTdZslZKqHVHsqhvTujMw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaUkJYZlpWYm51aG0rVlRK
[...]
            2FIHPnq7sdnXYJ+0zC+WFfUfTqYbYBQHCGXMNZC0umpaLD7HevWmZg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-30T15:07:48Z"
    mac: ENC[AES256_GCM,data:sdBP4gGWg2jJfDyrjYaRJq3Qc7jH8awasii0LTVs6LL91FdOTnGMQsGrdgjZNqYrievNp9bR7+6wn6tW/0mu66NT4BsKooSJ1XPHXP4MkVNj77FMj8JWakgU2Jpg0U/J+y84UA7KPcT7lguubKfT055n0vdg0DILQMUle5yAZt0=,iv:O6+IRBdl/S+8cdHTUzzjCv2uzmsQDjUbT2KnSHvZb6g=,tag:PFYO3RMtmwQzv8umcRLGyA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
